@@ -1,5 +1,11 @@
 2008-01-01  Jim Huang  <jserv@openmoko.org>
 
+	* src/appconfig.cpp (CAppConfig::DoDataExchange): Respect
+	UseExternalSSH and UseExternalTelnet options.
+	Patched by Jason Xia <jasonxh@gmail.com>.
+
+2008-01-01  Jim Huang  <jserv@openmoko.org>
+
 	* src/mainframe.cpp (CMainFrame::NewCon): Remove leading and trailing
 	spaces from URL when making connections. This fixes the bug of being
 	unable to connect to some sites from site browser, e.g. newsmth.net)
